[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mathclip"
version = "0.1.1"
description = "CLI to turn MathJax into a .png saved to your clipboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",     
    "pillow>=12.0.0",         
    "prompt-toolkit>=3.0.52",
    # "pywin32>=311",            # (used for Windows clipboard support, if needed)
]

[project.scripts]
mathclip = "mathclip.main:main"